# ecommerce-analisys

./: .gitignore  README.md  pyproject.toml
.github/workflows/: dags.yaml  terraform-new-ec2.yaml  terraform.yaml
airflow/: README.md
airflow/dags/: ecommerce_ingestion.py
docs/: Análise Fonte de Dados.md  bronze_to_silver_simplified.md
terraform/: README.md  ec2.tf  glue.tf  iam.tf  main.tf  network.tf  outputs.tf  redshift.tf  s3.tf  sgs.tf  user-data.sh  variables.tf
terraform/scripts/: README.md  bronze_to_silver.py  bronze_to_silver_new.py  bronze_to_silver_simplified.py  silver_to_gold.py
