[project]
name = "ecommerce-analisys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.0.4",
    "boto3>=1.40.10",
    "pandas>=2.3.1",
    "pymysql>=1.1.0",
    "requests>=2.31.0",
    "sqlalchemy>=1.4.49,<2.0",
]
