[project]
name = "ecommerce-analisys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.0.4",
    "boto3>=1.40.11",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pymysql>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=1.4.54",
]
